# plover_dictionary_patch

./: README.md  setup.cfg
plover_dictionary_patch/: __init__.py  dictionary.py
