[metadata]
name = plover-dictionary-patch
version = 0.0.1
description = JSON Dictionary Patches for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaoffie
author_email = kaoffie@gmail.com
url = https://github.com/Kaoffie/plover_modal_dictionary
license = MIT License (MIT)
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires = 
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0.dev8
packages = 
    plover_dictionary_patch

[options.entry_points]
plover.dictionary =
    dicp = plover_dictionary_patch:DictionaryPatch
